--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "@testing-library/react": "^13.0.1",
     "@testing-library/user-event": "^13.5.0",
     "firebase": "^9.6.10",
+    "lazyload": "^2.0.0-rc.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-fullscreen-image": "^0.0.3",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "sass": "^1.50.0",
